k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-with-quarkus
  namespace: my-namespace
spec:
  selector:
    app: code-with-quarkus
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
