k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-with-quarkus
  namespace: my-namespace
spec:
  rules:
    - host: "smart-thoughts.site"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: code-with-quarkus
                port:
                  number: 80
